--- a/src/app/components/shared/categories-filter/categories-filter.component.html
+++ b/src/app/components/shared/categories-filter/categories-filter.component.html
@@ -1,5 +1,5 @@
 <header class="sidebar-header">
-    <h3 class="sidebar-title">Categories</h3>
+    <h3 class="sidebar-title">CATEGORIES</h3>
 </header>
 <main fxLayout="column">
     <mat-selection-list #categoriesList>
