--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -1,21 +1,52 @@
-<div class="video-container" *ngIf="movie">
-    <video [poster]="movie.attachments[0].uri" controls>
-        <source src="https://res.cloudinary.com/dpfmyl1mn/video/upload/v1507137526/photocloud/prod/lanafeshchuk/svug6bgevnebjbndgfpt.mp4">
-    </video>
-    <div class="video-container__details" fxLayout="row" fxLayoutAlign="space-between center">
-        <span class="title">{{movie.title}}</span>
-        <a mat-button color="primary" [href]="movie.uri" target="_blank">OPEN SOURCE</a>
-    </div>
+<div class="movie-details" *ngIf="movie">
     <div>
-        <ul class="tags">
-            <li class="tag" *ngFor="let category of movie.categories;">
-                <a [routerLink]="['/recent', 1]" [queryParams]="{categories: category.name}">#{{category.name}}</a>
-            </li>
-        </ul>
+        <div fxLayout="row">
+            <video class="movie-details__video" [poster]="movie.attachments[0].uri" controls loop>
+                <source [src]="uri">
+            </video>
+        </div>
+        <div class="movie-details__details" fxLayout="row" fxLayoutAlign="space-between center">
+            <div>
+                <span class="movie-details__title">{{movie.title}}</span>
+                <ul class="movie-details__models">
+                    <li class="movie-details__model" *ngFor="let model of movie.models;">
+                        <a [routerLink]="['/recent', 1]" [queryParams]="{models: model.modelId}">{{model.name}}</a>
+                    </li>
+                </ul>
+            </div>
+            <a mat-button color="primary" [href]="movie.uri" target="_blank">OPEN SOURCE</a>
+        </div>
         <div>
-            <p class="description">
-                {{movie.description}}
-            </p>
+            <ul class="movie-details__tags">
+                <li class="movie-details__tag" *ngFor="let category of movie.categories;">
+                    <a [routerLink]="['/recent', 1]" [queryParams]="{categories: category.name}">#{{category.name}}</a>
+                </li>
+            </ul>
+            <div>
+                <p class="movie-details__description">
+                    {{movie.description}}
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="movie-details__related">
+        <header style="padding-bottom: 1.4rem;">
+            <h3>More videos with Lanafeshchuk</h3>
+        </header>
+        <div>
+            <div fxLayout="row">
+                <img style="width: 100px; height: 75px; object-fit: cover;" src="https://instagram.flwo1-1.fna.fbcdn.net/vp/ee45e6d8512edad0dbd32d334cc23857/5C516B74/t51.2885-15/e35/37029408_207310096778072_4787454093272547328_n.jpg" alt="lanafeshchuk">
+                <div style="padding-left: .75rem;" fxLayout="column" fxLayoutAlign="space-between start">
+                    <span>
+                        <strong>Lanafeshchuk - Sexy sensual girl</strong>
+                    </span>
+                    <div style="width: 100%; text-align: end;">
+                        <span>
+                            24:00
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
