--- a/src/app/components/movies-studios-filter/movies-studios-filter.component.html
+++ b/src/app/components/movies-studios-filter/movies-studios-filter.component.html
@@ -1,5 +1,5 @@
 <header class="sidebar-header">
-    <h3 class="sidebar-title">Studios</h3>
+    <h3 class="sidebar-title">STUDIOS</h3>
 </header>
 <main fxLayout="column">
     <mat-selection-list #studiosList>
