--- a/src/app/components/movies/movies.component.scss
+++ b/src/app/components/movies/movies.component.scss
@@ -3,9 +3,8 @@
 }
 
 .movies-title {
-    font-weight: normal;
-    text-transform: uppercase;
-    color: rgba(0, 0, 0, .65);
+    font-weight: bold;
+    color: rgba(0, 0, 0, .87);
 }
 
 .movies-header .button {
@@ -35,10 +34,6 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 30px;
-}
-
-.movies-gallery.loading {
-    opacity: .2;
 }
 
 .movie-item {
@@ -72,7 +67,7 @@
     right: .5rem;
     border-radius: 2px;
     background-color: rgba(0, 0, 0, .26);
-    color: rgba(255, 255, 255, .86);
+    color: rgba(255, 255, 255, .87);
     padding: .25rem;
 }
 
@@ -112,4 +107,27 @@ footer.movie-details {
     min-height: 100%;
     box-sizing: border-box;
     padding-bottom: 110px;
+    -webkit-transition: opacity .5s ease-in-out;
+    -moz-transition: opacity .5s ease-in-out;
+    -ms-transition: opacity .5s ease-in-out;
+    -o-transition: opacity .5s ease-in-out;
+    transition: opacity .5s ease-in-out;
+
+}
+
+.movie-content__movies.movie-content__movies--inactive {
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently supported by Chrome and Opera */
+    opacity: .5;
+    pointer-events: none;
 }
