--- a/src/app/components/shared/movie-item/movie-item.component.html
+++ b/src/app/components/shared/movie-item/movie-item.component.html
@@ -1,5 +1,5 @@
 <div class="movie">
-    <div class="movie__preview">
+    <div class="movie__preview" mat-ripple>
         <img [src]="movie.attachments[0].uri">
     </div>
         <div class="movie__footer">
