--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,23 +12,17 @@
             <span style="color: crimson; font-weight: bold; font-size: 2em;">.</span>
         </div>
     </div>
-    <div class="container" fxLayout="row" fxLayoutAlign="center center">
-        <div style="max-width: 50%;">
-            <form class="search-form" (ngSubmit)="searchMovies()" [formGroup]="formGroup" style="display: inline-flex;">
-                <input class="search-form__input" #searchInput formControlName="searchQuery" type="text" placeholder="Search" (blur)="searchFocusLost()">
-                <button class="search-form__submit" mat-flat-button type="submit">
-                    <mat-icon>search</mat-icon>
-                </button>
-            </form>
-        </div>
-    </div>
-    <div style="min-width: calc(240px - 0.7rem);"></div>
-    <button mat-button fxLayout="row" fxLayoutAlign="center center" [matMenuTriggerFor]="appMenu" *ngIf="currentUser" style="position: absolute; right: 0;">
-        <span style="font-size: .9em; padding-right: .5rem;">{{currentUser.email}}</span>
-        <img style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;" [src]="currentUser.picture" alt="user-avatar"/>
-        <mat-menu #appMenu="matMenu">
-            <button mat-menu-item (click)="signOut()">Logout</button>
-        </mat-menu>
-    </button>
+    <form class="header__search-form" (ngSubmit)="searchMovies()" [formGroup]="formGroup" style="display: inline-flex;">
+        <input class="search-form__input" #searchInput formControlName="searchQuery" type="text" placeholder="Search" (blur)="searchFocusLost()">
+        <button class="search-form__submit" mat-flat-button type="submit" color="primary">
+            <mat-icon>search</mat-icon>
+        </button>
+    </form>
     <button mat-flat-button (click)="signIn()" color="primary" *ngIf="!currentUser">Sign In</button>
+    <button class="account-button" [matMenuTriggerFor]="userMenu" *ngIf="currentUser">
+        <img class="account-button__avatar" [src]="currentUser.picture" alt="user-avatar"/>
+    </button>
 </header>
+<mat-menu #userMenu="matMenu" yPosition="below" style="position: absolute;">
+    <button mat-menu-item (click)="signOut()">Logout</button>
+</mat-menu>
