--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,6 +3,7 @@
     box-shadow: 0 3px 8px -4px rgba(0, 0, 0, .26); // border-bottom: 1px solid #eaeaea;
     // padding: .7rem 1.4rem .7rem .7rem;
     padding: .7rem;
+    position: relative;
 }
 
 .header a {
@@ -10,9 +11,10 @@
     text-decoration: none;
 }
 
-.search-form {
+.header__search-form {
     width: 100%;
-    min-width: 500px;
+    max-width: 500px;
+    min-width: 300px;
 }
 
 .search-form__input {
@@ -29,12 +31,30 @@
 }
 
 .search-form__submit {
-    background-color: #f1f3f4;
-    color: rgba(0, 0, 0, .65);
+    // background-color: #f1f3f4;
+    // color: rgba(0, 0, 0, .65);
+    // background-color: crimson;
+    // color: rgba(255, 255, 255, .86);
 }
 
 .navigation .active {
     border-bottom: 2px solid crimson;
     border-right: none;
     border-radius: 0;
+}
+
+.account-button {
+    background: none;
+    border: none;
+    border-radius: 25px;
+    outline: none;
+    padding: 0;
+    margin: 0;
+}
+
+.account-button__avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
 }
