--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -4,7 +4,7 @@
             <source [src]="uri">
         </video>
         <div class="movie-details__details">
-            <div class="movie-details__item" fxLayout="row" fxLayoutAlign="space-between center">
+            <div class="movie-details__item underline" fxLayout="row" fxLayoutAlign="space-between start">
                 <div>
                     <span class="movie-details__title">{{movie.title}}</span>
                     <ul class="movie-details__models">
@@ -13,19 +13,33 @@
                         </li>
                     </ul>
                 </div>
-                <a mat-button color="primary" [href]="movie.uri" target="_blank">OPEN SOURCE</a>
+                <a mat-button [href]="movie.uri" target="_blank" disabled>OPEN SOURCE</a>
             </div>
-            <div class="movie-details__item">
+            <!-- <div class="movie-details__item">
                 <ul class="movie-details__tags">
                     <li class="movie-details__tag" *ngFor="let category of movie.categories;">
                         <a [routerLink]="['/recent', 1]" [queryParams]="{categories: category.name}">#{{category.name}}</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
+            <!-- <div class="movie-details__item">
+                <button mat-button *ngFor="let category of movie.categories;">
+                    {{category.name}}
+                </button>
+            </div> -->
             <div class="movie-details__item">
+                <h3 class="movie-details__item__subtitle">Description</h3>
                 <p class="movie-details__description">
                     {{movie.description}}
                 </p>
+            </div>
+            <div class="movie-details__item">
+                <h3 class="movie-details__item__subtitle">Categories</h3>
+                <div class="movie-details__categories">
+                    <button mat-flat-button color="accent" *ngFor="let category of movie.categories;">
+                        {{category.name}}
+                    </button>
+                </div>
             </div>
             <div class="movie-details__item" *ngIf="movie.attachments.length > 1">
                 <h3 class="movie-details__item__subtitle">More scenes from movie</h3>
@@ -33,28 +47,22 @@
                     <div class="movie-details__attachment" *ngFor="let attachment of movie.attachments">
                         <img [src]="attachment.uri" alt="attachment{{attachment.attachmentId}}">
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <aside class="movie-details__related" *ngIf="relatedMovies | async as relatedMovies">
-        <header style="padding-bottom: 1.4rem;">
-            <h3>Related movies</h3>
-        </header>
-        <div>
-            <div fxLayout="row" *ngFor="let item of relatedMovies.data;">
-                <img style="width: 100px; height: 75px; object-fit: cover;" [src]="item.attachments[0].uri" alt="{{movie.title}}">
-                <div style="padding-left: .75rem;" fxLayout="column" fxLayoutAlign="space-between start">
-                    <span>
-                        <strong>{{item.title}}</strong>
-                    </span>
-                    <div style="width: 100%; text-align: end;">
-                        <span>
-                            {{movie.duration}}
-                        </span>
                     </div>
                 </div>
             </div>
         </div>
-    </aside>
-</div>
+        <aside class="movie-details__related">
+            <h3 class="movie-details__item__subtitle">Related movies</h3>
+            <div>
+                <div class="movie-details__related__item" fxLayout="row" *ngFor="let item of (relatedMovies | async)?.data">
+                    <img class="movie-details__related__item__preview" [src]="item.attachments[0].uri" alt="{{movie.title}}">
+                    <div class="movie-details__related__item__details" fxLayout="column" fxLayoutAlign="space-between start">
+                        <span class="movie-details__related__item__title">{{item.title}}</span>
+                        <div class="movie-details__related__item__duration">
+                            {{movie.duration}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </aside>
+    </div>
