--- a/src/app/components/shared/movie-item/movie-item.component.scss
+++ b/src/app/components/shared/movie-item/movie-item.component.scss
@@ -1,7 +1,10 @@
+@import '../../../../assets/scss/theme.scss';
+
 .movie__preview {
     width: 100%;
     padding-top: 66.66%;
     position: relative;
+    cursor: pointer;
 }
 
 .movie__preview img {
@@ -20,9 +23,10 @@
 }
 
 .movie__footer__title {
+    // color: mat-color($primary);
     color: inherit;
-    text-decoration: none;
     font-weight: bold;
+    text-decoration: none;
     padding-bottom: .75rem;
     cursor: pointer;
 }
