--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import './assets/scss/theme.scss';
 
 html {
     /* font-family: 'Karla', sans-serif; */
