--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -36,9 +36,9 @@
             <div class="movie-details__item">
                 <h3 class="movie-details__item__subtitle">Categories</h3>
                 <div class="movie-details__categories">
-                    <button mat-flat-button color="accent" *ngFor="let category of movie.categories;">
+                    <a mat-flat-button color="accent" *ngFor="let category of movie.categories;" [routerLink]="['recent', 1]" [queryParams]="{categories: category.name.toLowerCase()}">
                         {{category.name}}
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="movie-details__item" *ngIf="movie.attachments.length > 1">
@@ -47,22 +47,20 @@
                     <div class="movie-details__attachment" *ngFor="let attachment of movie.attachments">
                         <img [src]="attachment.uri" alt="attachment{{attachment.attachmentId}}">
                     </div>
-                    </div>
                 </div>
             </div>
         </div>
-        <aside class="movie-details__related">
-            <h3 class="movie-details__item__subtitle">Related movies</h3>
-            <div>
-                <div class="movie-details__related__item" fxLayout="row" *ngFor="let item of (relatedMovies | async)?.data">
-                    <img class="movie-details__related__item__preview" [src]="item.attachments[0].uri" alt="{{movie.title}}">
-                    <div class="movie-details__related__item__details" fxLayout="column" fxLayoutAlign="space-between start">
-                        <span class="movie-details__related__item__title">{{item.title}}</span>
-                        <div class="movie-details__related__item__duration">
-                            {{movie.duration}}
-                        </div>
-                    </div>
+    </div>
+    <aside class="movie-details__related">
+        <h3 class="movie-details__item__subtitle">Related movies</h3>
+        <div class="movie-details__related__item" fxLayout="row" *ngFor="let item of (relatedMovies | async)?.data">
+            <img class="movie-details__related__item__preview" [src]="item.attachments[0].uri" alt="{{movie.title}}">
+            <div class="movie-details__related__item__details" fxLayout="column" fxLayoutAlign="space-between start">
+                <a class="movie-details__related__item__title">{{item.title}}</a>
+                <div class="movie-details__related__item__duration">
+                    {{movie.duration}}
                 </div>
             </div>
-        </aside>
-    </div>
+        </div>
+    </aside>
+</div>
