--- a/src/app/components/movie-details/movie-details.component.scss
+++ b/src/app/components/movie-details/movie-details.component.scss
@@ -75,6 +75,13 @@
     grid-gap: .75rem;
 }
 
+.movie-details__category {}
+
+.movie-details__category:hover {
+    background: rgba(245, 245, 245, 1);
+    color: mat-color($primary) !important;
+}
+
 .movie-details__tags {
     margin: 0;
     padding: 0;
@@ -118,6 +125,7 @@
 }
 
 .movie-details__attachment {
+    position: relative;
     margin-right: 1.4rem
 }
 
@@ -145,6 +153,8 @@
 }
 
 .movie-details__related__item__title {
+    color: inherit;
+    text-decoration: none;
     cursor: pointer;
 }
 
