--- a/src/app/components/shared/movie-item/movie-item.component.scss
+++ b/src/app/components/shared/movie-item/movie-item.component.scss
@@ -5,6 +5,8 @@
     padding-top: 66.66%;
     position: relative;
     cursor: pointer;
+    border-radius: 2px;
+    box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.26);
 }
 
 .movie__preview img {
