--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -11,7 +11,9 @@
             <mat-label>Password</mat-label>
             <input type="password" matInput placeholder="Username">
         </mat-form-field>
-        <button class="signin__btn primary" mat-flat-button>Sign in</button>
-        <button class="signin__btn" mat-flat-button color="accent" (click)="signInWithGoogle()">Sign in with Google</button>
+        <div class="signin__actions">
+            <button class="signin__btn primary" mat-flat-button>Sign in</button>
+            <button class="signin__btn" mat-flat-button color="accent" (click)="signInWithGoogle()">Sign in with Google</button>
+        </div>
     </main>
 </div>
