--- a/src/app/components/movies/movies.component.scss
+++ b/src/app/components/movies/movies.component.scss
@@ -2,6 +2,11 @@
     padding-bottom: 2.8rem;
 }
 
+.movies-header a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .movies-title {
     font-weight: bold;
 }
