--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,8 +1,6 @@
 .header {
     background: white;
-    box-shadow: 0 3px 8px -4px rgba(0, 0, 0, .26); // border-bottom: 1px solid #eaeaea;
-    // padding: .7rem 1.4rem .7rem .7rem;
-    padding: .7rem;
+    padding-bottom: 2.8rem;
     position: relative;
 }
 
@@ -13,22 +11,19 @@
 
 .header__search-form {
     width: 100%;
-    max-width: 500px;
-    min-width: 300px;
     display: inline-flex;
+    color: rgba(0, 0, 0, .65);
 }
 
 .search-form__input {
-    background: rgb(241, 243, 244);
     color: rgba(0, 0, 0, .65);
-    border-radius: 2px;
-    padding: .5rem 1rem;
-    box-sizing: border-box;
-    line-height: normal;
+    width: 100%;
+    line-height: 1.2;
     border: none;
     outline: none;
-    // font-weight: lighter;
-    width: 100%;
+    font-weight: lighter;
+    font-size: 1em;
+    margin-left: .75rem;
 }
 
 .search-form__submit {
